@@ -1,5 +1,14 @@
 2023-08-05  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	[troff]: Trivially refactor (`define_color`).
+
+	* src/roff/troff/input.cpp (define_color): Throw more helpful
+	diagnostics when arguments from this 3-5-argument-taking request
+	is not given enough of them.  Rename internal variable `style`
+	to `color_space` to make it less opaque.
+
+2023-08-05  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	[troff]: Trivially refactor.
 
 	* src/roff/troff/input.cpp (input_char_description): Migrate to
